# pdf_table

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
docs/: CHANGELOG.md  install.md  language.md
docs/model/: download_model.md
src/pdftable/: __init__.py
src/pdftable/cli/: __init__.py  main.py
src/pdftable/dataset/: __init__.py
src/pdftable/entity/: __init__.py  common_entity.py  enum_entity.py  ie_entity.py  table_entity.py
src/pdftable/eval/: __init__.py  table_metric.py
src/pdftable/loss/: __init__.py  common_loss.py  lore_loss.py
src/pdftable/model/: __init__.py
src/pdftable/process/: __init__.py
src/pdftable/trainer/: __init__.py  basic_trainer.py  table_trainer.py
src/pdftable/utils/: __init__.py  base_utils.py  benchmark_utils.py  cmd_utils.py  common_utils.py  constant.py  deploy_utils.py  file_utils.py  logger_utils.py  match_utils.py  math_utils.py  pdf_table_extract_utils.py  pdf_utils.py  request_utils.py  time_utils.py  trainer_utils.py
tests/: __init__.py
tests/model/: __init__.py
tests/model/centernet/: __init__.py  run_table_centernet.py
tests/model/cls/: __init__.py  run_pp_lcnet_demo.py
tests/model/convnext_vit/: __init__.py  run_ocr_convertvit.py
tests/model/dbnet/: __init__.py  run_ocr_db_net.py
tests/model/docx_layout/: __init__.py  run_docx_layout.py
tests/model/lgpma/: __init__.py  run_lgpma_demo.py
tests/model/lore/: __init__.py  run_demo_dcnv2.py  run_table_lore.py  (+1 more)
tests/trainer/: __init__.py  run_table_trainer.py
tests/utils/: __init__.py
(+179 files in other folders)
